--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "continuation app.coffee -e -c"
   },
   "dependencies": {
-    "express": "3.0*",
-    "connect-assets": "2.3*",
-    "jade": "0.27*",
-    "less": "1.3*",
-  	"mongoose": "3.2*",
-  	"connect-mongo": "0.2*",
-  	"mkdirp": "0.3*",
+    "express": "3.4.7",
+    "connect-assets": "2.5.3",
+    "jade": "1.0.0",
+    "less": "1.5.1",
+  	"mongoose": "3.8.3",
+  	"connect-mongo": "0.4.0",
+  	"mkdirp": "0.3.5",
     "dateformat": "1.0.3-1.2.3",
     "marked": "0.2.9",
     "rss": "0.2.1",
